--- a/app/src/main/res/drawable/bg_1.xml
+++ b/app/src/main/res/drawable/bg_1.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="#86e3ce" />
+    <solid android:color="#8ec9bb" />
     <corners android:radius="7dp" />
 </shape>
