--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,6 +1,8 @@
 <!-- res/drawable/myrect.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#fdae38" />
+    android:shape="rectangle"
+    >
+
+    <solid android:color="#fff " />
     <corners android:radius="7dp" />
 </shape>
