--- a/app/src/main/res/drawable/white_shadow.xml
+++ b/app/src/main/res/drawable/white_shadow.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="#fff" />
+    <solid android:color="#f5f5f5 " />
     <corners android:radius="7dp" />
 </shape>
